--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 			<link
@@ -19,7 +17,20 @@
 			<!-- link CSS -->
 			<link rel="stylesheet" href="{{ asset('assets/style.css') }}">
         {% endblock %}
+    </head>
 
+    <body>
+
+		{% block header %}
+			{% include "partials/_header.html.twig" %}
+		{% endblock %}
+
+        {% block body %}{% endblock %}
+
+		{% block footer %}
+			{% include "partials/_footer.html.twig" %}
+		{% endblock %}
+		
         {% block javascripts %}
            		{{ encore_entry_script_tags('app') }}
 			<!-- link JavaScript -->
@@ -29,8 +40,5 @@
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
 			<script src="{{ asset('assets/script.js') }}"></script>
         {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
     </body>
 </html>
