--- a/templates/pages/products/index.html.twig
+++ b/templates/pages/products/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <style>
     .banner{
-        height:800px;
+        height:1000px;
         background:linear-gradient(rgba(0, 0, 0,.5),rgba(0, 0, 0,.5)),url(images/fondHome.jpg) center center fixed no-repeat;
         background-size:cover;
     }
@@ -16,12 +16,12 @@
         font-family: 'roboto';
     }
     .pagination li.active a{
-    background-color:  #caa502;
-    color: white;
+        background-color:  #caa502;
+        color: white;
     }
 
     .pagination li a {
-    color:   #caa502; /* Change la couleur du texte des éléments non actifs */
+        color:   #caa502;
     }
 
 </style>
@@ -32,18 +32,18 @@
         <div class="row title d-flex justify-content-center align-items-center">
             <div class="col-12 d-flex justify-content-center align-items-center text-white text-center">
             {% if not products.items is same as ([]) %}
-                <h1 class="heading fs-1 py-4">NOS PRODUITS</h1>
+                <h1 class="heading fs-1 py  ">NOS PRODUITS</h1>
             </div>
           
                 {# read and display just one flash message type #}
                {% for message in app.flashes('success') %}
-               <div class="alert alert-success my-5">
+               <div class="alert alert-success">
                 {{ message}}
                </div>
                {% endfor %}
             <div class="col-10 count mt-4 text-white">
             <button class="btn-warning px-3 py-3 my-3  fs-3">
-                {# <a class="text-white text-decoration-none" href="{{ path('products.new') }}">Créer un produit</a> #}
+                <a class="text-white text-decoration-none" href="{{ path('products.new') }}">Créer un produit</a>
             </button>
                 <h2 class="fs-4 py-4">Il y'a {{ products.getTotalItemCount}} produits au total.</h2>
             </div>
@@ -66,26 +66,25 @@
                     </thead>
                     <tbody>
                         {% for products in products %}
-                           <tr>
-                                <th  class="d-flex justify-content-center align-items-center text-warning">{{ products.id }}</th>
-                                <th>{{ products.name }}</th>
-                                <td>{{ products.price }}</td>
-                                <td>{{ products.size }}</td>
-                                <td>{{ products.artist }}</td>
-                                <td>{{ products.category }}</td>
-                                <td>{{ products.isPublic }}</td>
-                                <td>{{ products.createdAt|date('d/m/Y') }}</td>
-                                <td>
-                                    {# <a href="{{ path('products.edit', { id:products.id }) }}" class="text-warning">Modifier</a> #}
-                                </td>
-                                <td>
-                                    {# <a href="{{ path('products.delete', { id:products.id }) }}" class="text-danger">supprimer</a> #}
-                                </td>
-                           </tr>
+                        <tr>
+                            <th  class="d-flex justify-content-center align-items-center text-warning">{{ products.id }}</th>
+                            <th>{{ products.name }}</th>
+                            <td>{{ products.price }}</td>
+                            <td>{{ products.size }}</td>
+                            <td>{{ products.artist }}</td>
+                            <td>{{ products.category }}</td>
+                            <td>{{ products.isPublic }}</td>
+                            <td>{{ products.createdAt|date('d/m/Y') }}</td>
+                            <td>
+                               <a href="{{ path('products.edit', { id: products.id }) }}" class="text-warning">Modifier</a>
+                            </td>
+                            <td>
+                               <a href="{{ path('products.delete', { id: products.id }) }}" class="text-danger">supprimer</a>
+                            </td>
+                        </tr>
                         {% endfor %}
                     </tbody>
                 </table>
-
             </div>
 
             <div class="pagination pagination-lg col-10 d-flex justify-content-center align-items-center my-4">
