--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -667,9 +667,7 @@ footer a:hover{
     }
     footer .relative i{
         font-size: 20px;
-    }g
-
-  
+    }
 }
 @media (max-width: 450px) {
     html{
