--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -48,7 +48,7 @@
 
 	{% if app.user %}
 		<div class="dropdown">
-			<button class="btn dropdown-toggle m-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
+			<button class="btn dropdown-toggle8 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="true">
 				 {{ app.user.fullName}}
 			</button>
 			<ul class="dropdown-menu Action fs-5">
@@ -58,10 +58,10 @@
 					{% endif %}
 				</li> 
 				<li>
-					<a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier Identity</a>
+					{# <a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier Identity</a> #}
 				</li>
 				<li>
-					<a class="dropdown-item" href="{{ path('user.edit.password', {id : app.user.id}) }}">Modifier Password</a>
+					{# <a class="dropdown-item" href="{{ path('user.edit.password', {id : app.user.id}) }}">Modifier Password</a> #}
 				</li>
 				<li>
 					<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnexion</a>
@@ -71,16 +71,8 @@
 	{% else %}
 
 		<div id="LoginBtn">
-			{# <button class="btn"><a class="dropdown-item" href="{{ path('security.login') }}">SignUp</a></button> #}
+			<button class="btn fs-4"><a class="dropdown-item" href="{{ path('security.login') }}">SignUp</a></button>
 			<i class="fas fa-user"></i>
 		</div>
 	{% endif %}
-
-	        {% block javascripts %}
-           		{{ encore_entry_script_tags('app') }}
-			<!-- link JavaScript -->
-			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-			<script src="{{ asset('assets/script.js') }}"></script>
-        {% endblock %}
 </header>
