--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}houssArt - Connexion{% endblock %}
+{% block title %}houssArtGallery - Connexion{% endblock %}
 
 {% block body %}
 <style>
