--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -71,8 +71,8 @@
 	{% else %}
 
 		<div id="LoginBtn">
-			<button class="btn fs-4"><a class="dropdown-item" href="{{ path('security.login') }}">SignUp</a></button>
-			<i class="fas fa-user"></i>
+			<button class="btn fs-4"><a class="dropdown-item" href="{{ path('security.login') }}"><i class="fas fa-user"></i>SignUp</a></button>
+			
 		</div>
 	{% endif %}
 </header>
