--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -58,10 +58,10 @@
 					{% endif %}
 				</li> 
 				<li>
-					{# <a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier Identity</a> #}
+					<a class="dropdown-item" href="{{ path('user.edit', {id : app.user.id}) }}">Modifier Identity</a>
 				</li>
 				<li>
-					{# <a class="dropdown-item" href="{{ path('user.edit.password', {id : app.user.id}) }}">Modifier Password</a> #}
+					<a class="dropdown-item" href="{{ path('user.edit.password', {id : app.user.id}) }}">Modifier Password</a>
 				</li>
 				<li>
 					<a class="dropdown-item" href="{{ path('security.logout') }}">Déconnexion</a>
