--- a/templates/pages/products/new.html.twig
+++ b/templates/pages/products/new.html.twig
@@ -88,7 +88,7 @@
                 </div>
                 </div>
 
-                <div class="form-group text-white fs-4">    
+                <div class="form-group text-white fs-4 my-4">    
                 {{ form_label(form.isPublic) }}
                 {{ form_widget(form.isPublic) }}
                 <div class="form-error">
