add all modification

--- a/templates/pages/products/index.html.twig
+++ b/templates/pages/products/index.html.twig
@@ -19,9 +19,13 @@
         background-color:  #caa502;
         color: white;
     }
-
-    .pagination li a {
-        color:   #caa502;
+    .btn-warning{
+        background: #caa502;
+        border-radius: 1rem;
+    }
+    .btn-warning:hover{
+        background: #fff;
+        color: #caa502;
     }
 
 </style>
