--- a/templates/pages/products/edit.html.twig
+++ b/templates/pages/products/edit.html.twig
@@ -95,7 +95,7 @@
                 </div>
                 </div>
 
-                <div class="form-group text-white fs-4">    
+                <div class="form-group text-white fs-4 py-3">    
                 {{ form_label(form.isPublic) }}
                 {{ form_widget(form.isPublic) }}
                 <div class="form-error">
