add Security branch for making access routes

--- a/templates/pages/collection/index.html.twig
+++ b/templates/pages/collection/index.html.twig
@@ -31,7 +31,7 @@
         <div class="row title d-flex justify-content-center align-items-center mb-4">
             <div class="col-12 d-flex justify-content-center align-items-center text-white text-center">
             {% if not colletion.items is same as ([]) %}
-                <h1 class="heading fs-1">NOS COLLECTIONS</h1>
+                <h1 class="heading fs-1">MES COLLECTIONS</h1>
             </div>
           
                 {#read and display just one flash message type #}
