--- a/templates/pages/products/index.html.twig
+++ b/templates/pages/products/index.html.twig
@@ -36,7 +36,7 @@
         <div class="row title d-flex justify-content-center align-items-center">
             <div class="col-12 d-flex justify-content-center align-items-center text-white text-center">
             {% if not products.items is same as ([]) %}
-                <h1 class="heading fs-1">NOS PRODUITS</h1>
+                <h1 class="heading fs-1">MES PRODUITS</h1>
             </div>
           
                 {# read and display just one flash message type #}
