add publicCollection for qshawing all the collections for all public

--- a/templates/pages/products/show.html.twig
+++ b/templates/pages/products/show.html.twig
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-12 col-md-12 col-lg-6 critéres text-start d-flex justify-content-center align-items-center my-5">
                     <ul class=" list-group  list-group-flush fs-4 py-3">
-                        <h1 class="mb-5">CARACTERISTIQUES</h1>
+                        <h1 class="mb-5 ">CARACTERISTIQUES</h1>
                         <li class="list-group-item"><strong>NOM :</strong> {{ products.name }}</li>
                         <li class="list-group-item"><strong>ARTIST :</strong> {{ products.artist }}</li>
                         <li class="list-group-item"><strong>PRIX en EUROS:</strong> {{ products.price}}</li>
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
                   
-            </div>
+            </div>s
         </div>
     </div>
 </body>
