--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -189,7 +189,7 @@ header .navbar a:hover{
 }
 /* Login form Container */
 
-/* inscription form Container */
+
 
 /* home Section Start */
 .home{
@@ -260,251 +260,6 @@ header .navbar a:hover{
 }
 /* iconsContainer Section End*/
 
-/* Vehicules Section Start */
-.vehicule{
-    margin-bottom:200px;
-}
-.VehiculesSlider{
-    padding-bottom: 5rem;
-}
-.VehiculesSlider .box{
-    text-align:center; 
-}
-.vehicule img {
-    width: 100%;
-    height: 100%;
-    opacity: 0.5;
-    transform: scale(0.8);
-}
-.VehiculesSlider .swiper-slide-active img {
-    opacity: 1;
-    transform: scale(1);
-}
-.VehiculesSlider .box .content{
-    padding-top:1rem;
-    transform: scale(0);
-}
-.VehiculesSlider .swiper-slide-active .content{
-    transform: scale(1);
-}
-.VehiculesSlider .box .content  h3 {
-    font-size: 2.5rem;
-}
-.VehiculesSlider .box .content .price {
-    color: var(--main);
-    font-weight:600;
-    padding: 1rem 0;
-    font-size:2.2rem;
-}
-.VehiculesSlider .box .content .price span {
-    color: var(--main);
-    font-size: 1.5rem;
-    font-weight: 500;
-}
-.VehiculesSlider .box .content p{
-    font-size: 1.6rem;
-    padding: 1rem 0;
-    padding-top: 1.5rem;
-    border-top:var(--border);
-    color: var(--main);
-}
-.VehiculesSlider .box .content span{
-    color: var(--main);
-    font-size: 1rem;
-    padding:0 0.5rem;
-}.swiper-pagination-bullet-active{
-    background:var(--main);
-}
-/* Vehicules Section End*/
-
-/* Featured Section Start */
-.feature{
-    margin-bottom:200px;
-}
-.featureslider {
-    padding: 1rem;
-    padding-bottom: 4rem;
-}
-.featureslider .box {
-    padding: 2rem;
-    text-align:center;
-    border: var(--border);
-    border-radius: 0.5rem;
-    box-shadow:var(--box_shadow);
-}
-.feature img {
-    height: 15rem;
-}
-.feature .box:hover img{
-    transform: scale(1.08);
-}
-.feature .box .content h3{
-    font-size: 2.2rem;
-}
-.feature .box .content .stars{
-    padding: 1rem 0;
-}
-.feature .box .content .stars i{
-    color: var(--main);
-    font-size: 1.7rem;
-}
-.feature .price{
-    font-size: 2.5rem;
-} 
-/* Featured Section End */
-
-/* Service Section Start */
-.services{
-    margin-bottom: 200px;
-}
-.services .boxContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 2rem;
-}
-.services .boxContainer .box {
-    box-shadow: var(--box_shadow);
-    border: var(--border);
-    border-radius: 0.5rem;
-    padding: 2rem;
-    text-align: center;
-    cursor: pointer;
-}
-.services .boxContainer .box:hover{
-    background: #000;
-    color: #fff;
-}
-.services .boxContainer .box i {
-    height: 6rem;
-    width: 6rem;
-    border-radius: 50%;
-    line-height: 6rem ;
-    background: var(--main);
-    color: #000 ;
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-}
-.services .boxContainer .box h3{
-    font-size: 2.2rem;
-}
-.services .boxContainer .box .btn:hover{
-    background:#fff;
-    color:var(--main);
-}
-.services .boxContainer .box a{
-    color: #f8f6f6;
-    text-decoration: none;
-}
-.services .boxContainer .box a:hover{
-    color: var(--main);
-}
-.services .boxContainer .box p{
-    line-height: 1.8rem;
-    padding: 1rem 0;
-    color: lightslategrey;
-    font-size: 1.4rem;
-}
-/* Service Section End */
-
-/* Review section Start */
-.review{
-    margin-bottom:100px;
-}
-.ReviewSlider{
-    padding-bottom: 3rem;
-}    
-.ReviewSlider .box{
-    padding: 2rem;
-    text-align: center;
-    opacity:0.5 ;
-    margin: 2rem 0;
-    transform: scale(0.8);
-}
-.ReviewSlider .swiper-slide-active {
-    opacity: 1;
-    box-shadow: var(--box_shadow);
-    border: var(--border);
-    border-radius: 0.5rem;
-}
-.ReviewSlider .box img {
-    border-radius: 50%;
-    object-fit: cover;
-    background: black;
-}
-.ReviewSlider .box .content p {
-    font-size: 1.5rem;
-    padding: 1rem 0;
-}
-.ReviewSlider .box .content h3{
-    font-size: 2.2rem;
-    padding-bottom: 0.5; 
-    
-}.ReviewSlider .box .content .stars i{
-    font-size: 1.7rem;
-    color: var(--main);
-
-}
-/* Review section End */
-
-/* Contact form Start*/
-.contact {
-    margin-bottom:200px;
-}
-.contact .row {
-    display: flex;
-    flex-wrap:wrap;
-    gap: 1.5rem;
-}
-.contact .row .iframe{
-    flex: 1 1 42rem;
-    width:100%;
-    height: 55rem;
-    padding: 2rem;
-    box-shadow: var(--box_shadow);
-    border: var(--border);
-    border-radius: 0.5rem;
-}
-.contact form{
-    flex: 1 1 42rem;
-    padding: 2rem;
-    box-shadow: var(--box_shadow);
-    border: var(--border);
-    text-align: center;
-    border-radius: 0.5rem;
-}
-.contact h3 {
-    font-size: 3rem ;
-    padding-bottom:  1rem;
-}
-.contact form .box {
-    width: 100%;
-    border-radius: 0.5rem;
-    padding:  1rem 1.2rem;
-    text-transform: none;
-    border: var(--border);
-    font-size: 1.6rem;
-    margin: 0.7rem 0;
-}
-.contact form textarea {
-    resize : none;
-    height: 15rem;
-}
-.contact .utilities .location{
-    box-shadow: 0 0 1rem rgb(17, 15, 15);
-    padding: 1rem;
-}
-.contact .utilities .location a{
-    color: var(--main);
-    text-decoration: none;
-}
-.contact .utilities .location a:hover{
-    color: #fff;
-    background: var(--main);
-    border-radius: 5px;
-    transition: 0.5s;
-}
-/* Contact form End*/
-
 /* Section Footer Start */
 footer{
     display: flex;
@@ -518,11 +273,8 @@ footer{
     
 }
 .box-ch{
-    box-shadow: 0 0 1.2rem rgb(26, 24, 24);
-    border-radius: 1rem;
-}
-.rounded{
-    border-radius: 1rem ;
+    box-shadow: 0 0 .2rem rgb(19, 18, 18);
+    border: solid 1px transparent;
 }
 .footerA{
     width: 100%;
