--- a/templates/pages/collection/show.html.twig
+++ b/templates/pages/collection/show.html.twig
@@ -17,6 +17,10 @@
         heigth: 100%;
         padding: 2rem;
     }
+    .radius{
+        border-radius: 50%;
+        box-shadow: 0 0 1rem #000;
+}
     .container {
         position: relative;
     }
@@ -46,31 +50,42 @@
     .scroll-container .col-sm-12.col-md-3.col-lg-3 {
         flex: 0 0 auto;
     }
+    .card{
+        box-shadow: 0 0 1rem yellow;
+    }
+    .description li{
+    font-family: 'roboto';
+    background: transparent;
+    color: #fff;
+}
 
 </style>
 
 <body>
     <div class="container-fluid banner py-5">
         <div class="container opacity d-flex justify-content-center align-items-center">
-            <div class="row section d-flex justify-content-end align-items-center">
+            <div class="row section d-flex justify-content-between align-items-center">
                 <div class="col-12 col-md-12 col-lg-6">
-                    <div class="card h-100 box-ch">
-                    <h1 class="py-4">{{ colletion.name }}</h1>
-                        {# <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <img src="https://cdn.pixabay.com/photo/2023/03/17/20/42/camera-7859402_1280.jpg" width="180px" height="180px" class="radius">
+                </div> 
+                <div class="col-12 col-md-12 col-lg-6">
+                    <div class="card bg-transparent mx-5 fs-5 h-100">
+                    <h1 class="py-4 text-white">{{ colletion.name }}</h1>
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                             <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             </div>
-                            <div class="carousel-inner box-ch">
-                            <div class="carousel-item active box-ch">
-                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 box-ch p-3" alt="...">
+                            <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 box-ch p-3" alt="...">
+                                <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 box-ch p-3" alt="...">
+                                <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block w-100 p-3" alt="...">
                             </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -81,13 +96,6 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                             </button>
-                        </div> #}
-                        <div class="card-body">
-                        <h5 class="card-title">{{ colletion.price }} €</h5>
-                        <p class="card-text">{{ colletion.description|slice(0,200) ~ '...'  }}</p>
-                        </div>
-                        <div class="card-footer bg-secondary my-3">
-                        <small class="text-white fs-5"><strong>Date de publication :</strong>{{ colletion.createdAt|date('d/m/Y') }}</small>
                         </div>
                     </div>
                 </div>
@@ -113,13 +121,13 @@
         </div>
         <div class="container">
             <div class="col-12 critéres text-start d-flex-column justify-content-center align-items-center text-white">
-                <ul class=" list-group list-group-flush fs-5 py-3">
+                <ul class=" list-group  description list-group-flush fs-5">
                     <h1 class="fs-3 text-center">CARACTERISTIQUES</h1>
-                    <li class="list-group-item list-group-item-warning"><strong>NOM :</strong> {{ colletion.name }}</li>
-                    <li class="list-group-item list-group-item-warning"><strong>ARTIST :</strong> {{ colletion.artist }}</li>
-                    <li class="list-group-item list-group-item-warning"><strong>PRIX en EUROS:</strong> {{ colletion.price}}</li>
-                    <li class="list-group-item list-group-item-warning"><strong>CATEGORIE :</strong> {{ colletion.category }}</li>
-                    <li class="list-group-item list-group-item-warning"><strong>DESCRIPTION :</strong> {{ colletion.description|slice(0,500) ~ '...' }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>NOM :</strong> {{ colletion.name }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>ARTIST :</strong> {{ colletion.artist }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>PRIX en EUROS:</strong> {{ colletion.price}}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>CATEGORIE :</strong> {{ colletion.category }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>DESCRIPTION :</strong> {{ colletion.description|slice(0,600) ~ '...' }}</li>
                     {# <li class="list-group-item list-group-item-warning">  <a href="{{ path('contact.index') }}" class="btn btn-primary">Reserver</a></li> #}
                 </ul>
             </div> 
