--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -5,7 +5,7 @@
 	<nav class="navbar">
 		<a href="{{ path('home.index') }}">HOME</a>
 		<a href="#">NOS PRODUITS</a>
-		<a href="#">NOS COLLECTIONS</a>
+		<a href="{{ path('collection.index.public')}}">NOS COLLECTIONS</a>
 		<a href="./#Service">A PROPOS</a>
 		<a href="#">REVIEWS</a>
 		<a href="#">NOUS CONTACTER</a>
