--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -4,7 +4,7 @@
 
 	<nav class="navbar">
 		<a href="{{ path('home.index') }}">HOME</a>
-		<a href="#">NOS PRODUITS</a>
+		<a href="{{ path('products.index.public')}}">NOS PRODUITS</a>
 		<a href="{{ path('collection.index.public')}}">NOS COLLECTIONS</a>
 		<a href="./#Service">A PROPOS</a>
 		<a href="#">REVIEWS</a>
