--- a/templates/pages/products/show.html.twig
+++ b/templates/pages/products/show.html.twig
@@ -6,45 +6,67 @@
     
 <style>
     .banner{
-        height: 800px;
+        height: 100%;
         background:linear-gradient(rgba(0, 0, 0,.5),rgba(0, 0, 0,.5)),url(https://cdn.pixabay.com/photo/2016/09/04/12/38/living-room-1643855_1280.jpg) center center fixed no-repeat;
         background-size:cover;
     }
     .section{
-        margin: 20rem 0;
+        margin: 15rem 0;
     }
     .banner .critéres{
-        border: solid 1px transparent;
-        background: white;
-        opacity: 0.8;
         heigth: 100%;
-        margin: 20rem 0 20rem 0;
+        padding: 2rem;
+    }
+    .artist{
+    font-family: 'Ruthie', cursive;
+    font-weight: bold;
+    font-size: 5rem;
+    }
+    .radius{
+        border-radius: 50%;
+        box-shadow: 0 0 1rem #000;
+    }
+    .card img{
+        box-shadow: 0 0 1rem yellow;
+    }
+    .carctéristique, 
+    .description li{
+        font-family: 'roboto';
+        background: transparent;
+        color: #fff;
+    }
+    hr{
+    border: solid 1px #fff; 
     }
 
 </style>
 
 <body>
     <div class="container-fluid banner py-5">
-        <div class="container opacity d-flex justify-content-center align-items-center mb-4">
-            <div class="row section d-flex justify-content-center align-items-center py-5">
-                <div class="col-12 col-md-12 col-lg-6 my-5">
-                    <div class="card h-100 box-ch">
-                    <h1 class="p-4">{{ products.name }}</h1>
-                        {# <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="container opacity d-flex justify-content-center align-items-center">
+            <div class="row section d-flex justify-content-between align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-4 d-flex-column justify-content-end align-items-center">
+                    <img src="https://cdn.pixabay.com/photo/2023/03/17/20/42/camera-7859402_1280.jpg" width="180px" height="180px" class="radius">
+                    <p class="mx-3 fs-1 text-warning artist">{{ products.artist}}</p>
+                </div> 
+                <div class="col-sm-12 col-md-12 col-lg-8">
+                    <div class="card bg-transparent mx-5 fs-5 h-100">
+                    <h1 class="py-4 text-center text-white artist">{{ products.name }}</h1>
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                             <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             </div>
-                            <div class="carousel-inner box-ch">
-                            <div class="carousel-item active box-ch">
-                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 box-ch p-3" alt="...">
+                            <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block img w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 box-ch p-3" alt="...">
+                                <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block img w-100 p-3" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 box-ch p-3" alt="...">
+                                <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block img w-100 p-3" alt="...">
                             </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -55,31 +77,26 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                             </button>
-                        </div> #}
-                        <div class="card-body">
-                        <h5 class="card-title">{{ products.price }} €</h5>
-                        <p class="card-text">{{ products.property|slice(0,200) ~ '...'  }}</p>
-                        </div>
-                        <div class="card-footer bg-secondary my-3">
-                        <small class="text-white fs-5"><strong>Date de publication :</strong>{{ products.createdAt|date('d/m/Y') }}</small>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-12 col-lg-6 critéres text-start d-flex justify-content-center align-items-center my-5">
-                    <ul class=" list-group  list-group-flush fs-4 py-3">
-                        <h1 class="mb-5 ">CARACTERISTIQUES</h1>
-                        <li class="list-group-item"><strong>NOM :</strong> {{ products.name }}</li>
-                        <li class="list-group-item"><strong>ARTIST :</strong> {{ products.artist }}</li>
-                        <li class="list-group-item"><strong>PRIX en EUROS:</strong> {{ products.price}}</li>
-                        <li class="list-group-item"><strong>TAILLE :</strong> {{ products.size }}</li>
-                        <li class="list-group-item"><strong>CATEGORIE :</strong> {{ products.category }}</li>
-                        <li class="list-group-item"><strong>DESCRIPTION :</strong> {{ products.property|slice(0,500) ~ '...' }}</li>
-                        {# <li class="list-group-item">  <a href="{{ path('contact.index') }}" class="btn btn-primary">Reserver</a></li> #}
-                    </ul>
-                </div>
-                  
-            </div>s
+            </div>
         </div>
+        <div class="container">
+        <hr>
+            <div class="col-12 critéres text-start d-flex-column justify-content-center align-items-center text-white">
+                <ul class=" list-group  description list-group-flush fs-5">
+                    <h1 class="fs-1 carctéristique text-warning">CARACTERISTIQUES</h1>
+                    <li class="list-group-item bg-transparent fs-3"><strong>NOM :</strong> {{ products.name }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>ARTIST :</strong> {{ products.artist }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>PRIX en EUROS:</strong> {{ products.price}}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>CATEGORIE :</strong> {{ products.category }}</li>
+                    <li class="list-group-item bg-transparent fs-3"><strong>DESCRIPTION :</strong> {{ products.property|slice(0,600) ~ '...' }}</li>
+                    {# <li class="list-group-item list-group-item-warning">  <a href="{{ path('contact.index') }}" class="btn btn-primary">Reserver</a></li> #}
+                </ul>
+            </div> 
+        </div>
+
     </div>
 </body>
 
