--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,5 +1,17 @@
+<!-- localisation start -->
+
+<div class="container-fluid localisation ">
+	<div class="row my-5 d-flex -justif-content-center align-items-center">
+		<div class="col-12 d-flex justify-content-center align-items-center">
+			<iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2890.950066895727!2d1.4107371762735332!3d43.56592355807125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebbcf48268f93%3A0x3a982bed4911e80e!2s226%20Rte%20de%20Seysses%2C%2031100%20Toulouse!5e0!3m2!1sfr!2sfr!4v1687799117781!5m2!1sfr!2sfr" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        	</iframe>
+		</div>
+	</div>
+</div>
+<!-- localisation end -->
 <footer>
 		{% block footer %}
+
 		<div class="container confid">
 		    <div class="row">
 		        <div class="copyR col-sm-12 col-md-6 col-lg-8 fs-4">
