--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -15,7 +15,7 @@
 		<div class="container confid">
 		    <div class="row">
 		        <div class="copyR col-sm-12 col-md-6 col-lg-8 fs-4">
-					<a href="#">&copy; 2024 HoussArtGallery.com | Designed By E.Houss Digital</a>
+					<a href="#">&copy; 2024 HoussArtGallery.com |Designed By E.Houss.Digital</a>
 		        </div>
 		        <div class="col-sm-12 termes col-md-6 col-lg-4 d-flex justify-content-around fs-4 align-items-center">
 			        <a href="#">CONTACT</a>
