--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -10,13 +10,23 @@
         background:linear-gradient(rgba(0, 0, 0,.6),rgba(0, 0, 0,.6)),url(https://cdn.pixabay.com/photo/2016/09/04/12/38/living-room-1643855_1280.jpg) center center fixed no-repeat;
         background-size:cover;
     }
+    .banner1{
+        height:100%;
+        background:linear-gradient(rgba(0, 0, 0,.6),rgba(0, 0, 0,.6)),url(https://cdn.pixabay.com/photo/2016/09/04/12/38/living-room-1643855_1280.jpg) center center fixed no-repeat;
+        background-size:cover;
+    }
     .banner h2{
-        font-size: 7rem;
+        font-size: 3rem;
         font-weight: bold;
         font-family: 'Ruthie', cursive;
     }
     .banner h1{
         font-size: 8rem;
+        color: white;
+        font-family: 'Abril Fatface', serif;
+    }
+    .banner1 h1{
+        font-size: 5rem;
         color: white;
         font-family: 'Abril Fatface', serif;
     }
@@ -32,14 +42,33 @@
 		color: white;
 		text-decoration: none;
 		padding: 20px;
-		font-size: 1.3rem;
-		border-radius: 15px;
+		font-size: 1.5rem;
+		font-family: 'roboto', serif;
+	}
+	.banner1 a{
+		background: #caa502;
+		color: white;
+		text-decoration: none;
+		padding: 20px;
+		font-size: 1.5rem;
 		font-family: 'roboto', serif;
 	}
 	.banner a:hover{
 		background: #fff;
 		color: #caa502;
 	}
+	.banner1 a:hover{
+		background: #fff;
+		color: #caa502;
+	}
+	.box-ch{
+		box-shadow: 0 0 1rem #000;
+	}
+	.artist{
+        font-family: 'roboto';
+        font-weight: bold;
+        font-size: 1rem;
+    }
 </style>
 <div class="container-fluid banner d-flex justify-content-center align-items-center ">
 <div class="row container-fluid">
@@ -67,7 +96,7 @@
 </div>
 </div>
 <!-- Icons Container Start-->
-<div class="container bg">
+<div class="container bg mt-5">
 	<section class=" row iconsContainer">
 		<div class="icons">
 			<i class="fa-solid fa-code-branch"></i>
@@ -101,6 +130,50 @@
 			</div>
 		</div>
 	</section>
+</div>
+<div class="container-fluid banner1 py-5">
+	<div class="container">
+		<div class="row d-flex-row justify-content-between align-items-center py-5 my-5">
+			<h1 class="heading py-5 text-white">NOTRE GALERIE</h1>
+			{% for products in products %}
+			<div class="col-10 col-sm-10 col-md-6 col-lg-3 my-4">
+	        	<div class="card h-100 box-ch rounded-0 border-transparent bg-white my-5">
+	            	<h2 class="p-4 text-center artist fs-4">{{ products.name}}</h2>
+	                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+	                    <div class="carousel-indicators">
+	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+	                    </div>
+	                    <div class="carousel-inner">
+	                    <div class="carousel-item active">
+	                        <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block w-100 p-3" alt="...">
+	                    </div>
+	                    <div class="carousel-item">
+	                        <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block w-100 p-3" alt="...">
+	                    </div>
+	                    <div class="carousel-item">
+	                        <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block w-100 p-3" alt="...">
+	                    </div>
+	                    </div>
+	                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+	                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	                    <span class="visually-hidden">Previous</span>
+	                    </button>
+	                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+	                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	                    <span class="visually-hidden">Next</span>
+	                    </button>
+	                    </div>
+	            </div>
+	        </div>
+			{% endfor %}
+			<p class="fs-2 text-center text-white my-5">Découvrez l'univers envoûtant de l'houssArtGallery, où l'art prend vie dans une symphonie de couleurs et d'émotions. Notre nouvelle exposition vous invite à plonger au cœur d'une collection unique, où chaque œuvre raconte une histoire, éveille une émotion, ouvre une fenêtre sur un monde d'inspiration sans limite. De la peinture figurative aux sculptures modernes, nos collections célèbrent la diversité et la richesse de l'expression artistique. Laissez-vous transporter par la beauté et la créativité, et venez vivre une expérience inoubliable au sein de l'houssArtGallery. Rejoignez-nous pour un voyage au-delà du visible, où l'art révèle les nuances les plus subtiles de l'âme humaine.</p>
+			<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
+				<a href="{{ path('products.index.public')}}">VOIR TOUS NOS TABLEAUX</a>
+			</div>
+	    </div>
+	</div>
 </div>
 
 </body>
