add HomeCollections for adding collections section to display colletions in homePpage

--- a/templates/pages/collection/index_public.html.twig
+++ b/templates/pages/collection/index_public.html.twig
@@ -64,8 +64,8 @@ hr{
                     <p class="mx-3 fs-1 text-warning artist"> Artiste : {{ colletion.artist}}</p>
                 </div> 
                 <div class="col-12 col-md-12 col-lg-8">
-                    <div class="card h-100 box-ch rounded-0 border-none bg-transparent">
-                    <h1 class="p-4 text-white text-center artist">{{ colletion.name}}</h1>
+                    <div class="card h-100 box-ch rounded-0 border-none bg-white">
+                    <h1 class="p-4 text-warning text-center artist">{{ colletion.name}}</h1>
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                             <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
