--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -40,9 +40,11 @@ html{
 
 }
 .heading{
-    padding-bottom:2rem;
-    font-size:2rem;
-    text-align:center;
+    padding-bottom: 2rem;
+    font-size: 5rem;
+    text-align: center;
+    font-family: 'Abril Fatface', serif;
+    color: #c7a703;
 }
 /*  Header/Navbar Start  */
 header{
