--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -37,15 +37,9 @@
         padding: 2rem 0;
 
     }
+	.banner1 a,
+	.banner2 a,
 	.banner a{
-		background: #caa502;
-		color: white;
-		text-decoration: none;
-		padding: 20px;
-		font-size: 1.5rem;
-		font-family: 'roboto', serif;
-	}
-	.banner1 a{
 		background: #caa502;
 		color: white;
 		text-decoration: none;
@@ -70,31 +64,34 @@
         font-size: 1rem;
     }
 </style>
+<!-- HomeSection start -->
 <div class="container-fluid banner d-flex justify-content-center align-items-center ">
-<div class="row container-fluid">
+	<div class="row container-fluid">
 
-               {% for message in app.flashes('success') %}
-               <div class="alert alert-success mt-4">
-                {{ message}}
-               </div>
-               {% endfor %}
+    	{% for message in app.flashes('success') %}
+    	<div class="alert alert-success mt-4">
+    	 {{ message}}
+    	</div>
+    	{% endfor %}
 			   
-    <section id="Home" class="col col-sm-12 col-md-9 col-lg-9 home d-flex-colomn justify-content-start align-items-center ">
-		<h2 class="homeParalexEffect text-warning">
-			Bienvenue sur
-        </h2>
-		<h1 class="homeParalexEffect text-white d-flex justify-content-center w-100 ">
-			Houss.Art.Gallery
-        </h1>
-        <p>Plongez au cœur de l'expression artistique,<br>
-         où chaque œuvre raconte une histoire unique. <br>
-         Laissez-vous emporter dans un voyage visuel inoubliable.</p>
-	</section>  
-    <span class="col-sm-12 col-md-3 col-lg-3 d-flex justify-content-center align-items-center ">
-		<a href="#">NOUS CONTACTER</a>
-	</span>
+    	<section id="Home" class="col col-sm-12 col-md-9 col-lg-9 home d-flex-colomn justify-content-start align-items-center ">
+			<h2 class="homeParalexEffect text-warning">
+				Bienvenue sur
+    	    </h2>
+			<h1 class="homeParalexEffect text-white d-flex justify-content-center w-100 ">
+				Houss.Art.Gallery
+    	    </h1>
+    	    <p>Plongez au cœur de l'expression artistique,<br>
+    	     où chaque œuvre raconte une histoire unique. <br>
+    	     Laissez-vous emporter dans un voyage visuel inoubliable.</p>
+		</section>  
+    	<span class="col-sm-12 col-md-3 col-lg-3 d-flex justify-content-center align-items-center ">
+			<a href="#">NOUS CONTACTER</a>
+		</span>
+	</div>
 </div>
-</div>
+<!-- HomeSection End -->
+
 <!-- Icons Container Start-->
 <div class="container bg mt-5">
 	<section class=" row iconsContainer">
@@ -131,9 +128,12 @@
 		</div>
 	</section>
 </div>
+<!-- Icons Container End -->
+
+<!--  ProductsHome Start -->
 <div class="container-fluid banner1 py-5">
 	<div class="container">
-		<div class="row d-flex-row justify-content-between align-items-center py-5 my-5">
+		<div class="row d-flex-row justify-content-center align-items-center py-5 my-5">
 			<h1 class="heading py-5 text-white">NOTRE GALERIE</h1>
 			{% for products in products %}
 			<div class="col-10 col-sm-10 col-md-6 col-lg-3 my-4">
@@ -175,6 +175,54 @@
 	    </div>
 	</div>
 </div>
+<!--  ProductsHome End -->
+
+<!--  CollectionsHome Start -->
+<div class="container-fluid banner2 py-5">
+	<div class="container">
+		<div class="row d-flex-row justify-content-center align-items-center py-5 my-5">
+			<h1 class="heading py-5">NOS COLLECTIONS</h1>
+			{% for colletion in colletion %}
+			<div class="col-10 col-sm-10 col-md-6 col-lg-3 my-4">
+	        	<div class="card h-100 box-ch rounded-0 border-transparent bg-white my-5">
+	            	<h2 class="p-4 text-center artist fs-4">{{ colletion.name}}</h2>
+	                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+	                    <div class="carousel-indicators">
+	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+	                    </div>
+	                    <div class="carousel-inner">
+	                    <div class="carousel-item active">
+	                        <img src="https://cdn.pixabay.com/photo/2019/05/01/10/14/research-4170441_1280.jpg" class="d-block w-100 p-3" alt="...">
+	                    </div>
+	                    <div class="carousel-item">
+	                        <img src="https://cdn.pixabay.com/photo/2017/02/01/07/52/child-2029072_1280.jpg" class="d-block w-100 p-3" alt="...">
+	                    </div>
+	                    <div class="carousel-item">
+	                        <img src="https://cdn.pixabay.com/photo/2021/08/11/16/06/mountain-6538890_1280.jpg" class="d-block w-100 p-3" alt="...">
+	                    </div>
+	                    </div>
+	                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+	                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	                    <span class="visually-hidden">Previous</span>
+	                    </button>
+	                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+	                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	                    <span class="visually-hidden">Next</span>
+	                    </button>
+	                    </div>
+	            </div>
+	        </div>
+			{% endfor %}
+			<p class="fs-2 text-center my-5">Au sein de l'houssArtGallery, chaque collection est une ode à l'exploration artistique, un carrefour où se rencontrent passé, présent et futur. Nos soigneusement sélectionnées incarnent l'avant-garde de la créativité, allant des chefs-d'œuvre classiques réinterprétés aux expressions contemporaines les plus audacieuses. Chaque pièce est choisie pour sa capacité à dialoguer avec les sens, éveillant curiosité et admiration. Nous invitons les passionnés d'art et les collectionneurs à découvrir des trésors cachés, des œuvres qui défient le temps et racontent des histoires universelles. L'houssArtGallery est plus qu'une galerie, c'est un sanctuaire où l'art est célébré comme le reflet le plus pur de l'humanité.</p>
+			<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
+				<a href="{{ path('collection.index.public')}}">VOIR TOUS NOS COLLECTIONS</a>
+			</div>
+	    </div>
+	</div>
+</div>
+<!--  CollectionsHome End -->
 
 </body>
 {% endblock %}
