--- a/templates/pages/products/show.html.twig
+++ b/templates/pages/products/show.html.twig
@@ -10,6 +10,14 @@
         background:linear-gradient(rgba(0, 0, 0,.5),rgba(0, 0, 0,.5)),url(https://cdn.pixabay.com/photo/2016/09/04/12/38/living-room-1643855_1280.jpg) center center fixed no-repeat;
         background-size:cover;
     }
+    .banner a{
+		background: #caa502;
+		color: white;
+		text-decoration: none;
+		padding: 20px;
+		font-size: 1.5rem;
+		font-family: 'roboto', serif;
+	}
     .section{
         margin: 15rem 0;
     }
@@ -18,7 +26,7 @@
         padding: 2rem;
     }
     .artist{
-        font-family: 'Ruthie', cursive;
+    font-family: 'Ruthie', cursive;
         font-weight: bold;
         font-size: 5rem;
     }
@@ -95,6 +103,9 @@
                     {# <li class="list-group-item list-group-item-warning">  <a href="{{ path('contact.index') }}" class="btn btn-primary">Reserver</a></li> #}
                 </ul>
             </div> 
+            <div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
+				<a href="">RESERVER MAINTENANT</a>
+			</div>
         </div>
 
     </div>
