add all modification

--- a/templates/pages/collection/show.html.twig
+++ b/templates/pages/collection/show.html.twig
@@ -69,7 +69,7 @@
 <body>
     <div class="container-fluid banner py-5">
         <div class="container opacity d-flex justify-content-center align-items-center">
-            <div class="row section d-flex justify-content-center align-items-center">
+            <div class="row section d-flex justify-content-centers align-items-center">
                 <div class="col-12 col-md-12 col-lg-6">
                     <img src="https://cdn.pixabay.com/photo/2023/03/17/20/42/camera-7859402_1280.jpg" width="180px" height="180px" class="radius">
                 </div> 
