add ContactForm for create page of contactForm

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -8,7 +8,7 @@
 		<a href="{{ path('collection.index.public')}}">NOS COLLECTIONS</a>
 		<a href="./#Service">A PROPOS</a>
 		<a href="#">REVIEWS</a>
-		<a href="#">NOUS CONTACTER</a>
+		<a href="{{ path('contact.index') }}">NOUS CONTACTER</a>
 	</nav>
 
 	{% if app.user %}
