add controller to show all users in view

--- a/templates/pages/collection/show.html.twig
+++ b/templates/pages/collection/show.html.twig
@@ -166,7 +166,7 @@
                 <p class="fs-4 py-3">La moyenne de cette collection est de {{ colletion.average|number_format(2, '.', ',' ) }}/5</p>
             </div> 
             <div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
-				<a href="">RESERVER MAINTENANT</a>
+				<a href="{{ path('contact.index') }}">RESERVER MAINTENANT</a>
 			</div>
         </div>
 
