--- a/templates/pages/products/show.html.twig
+++ b/templates/pages/products/show.html.twig
@@ -104,7 +104,7 @@
                 </ul>
             </div> 
             <div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
-				<a href="">RESERVER MAINTENANT</a>
+				<a href=" {{ path('contact.index') }}">RESERVER MAINTENANT</a>
 			</div>
         </div>
 
