--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -18,7 +18,7 @@
 					<a href="#">&copy; 2024 HoussArtGallery.com |Designed By EL.Houss.Digital</a>
 		        </div>
 		        <div class="col-sm-12 termes col-md-6 col-lg-4 d-flex justify-content-around fs-4 align-items-center">
-			        <a href="#">CONTACT</a>
+			        <a href="{{ path('contact.index')}}">CONTACT</a>
 			        <a href="#">TERMES</a>
 			        <a href="#">POLITIQUES</a>
 		        </div>
